sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Section__mdt/SFDC_Industry_Mapping_Section__mdt.object-meta.xml
<CustomObject>
    <description>Contains groupings of mappings for display within an Assessment.</description>
    <label>SFDC Industry Mapping Section</label>
    <pluralLabel>SFDC Industry Mapping Sections</pluralLabel>
</CustomObject>