sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Section__mdt/fields/Controlling_Question__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question__c</fullName>
    <description>The question which prompts this section to display after it gets answered</description>
    <inlineHelpText>The question which prompts this section to display after it gets answered</inlineHelpText>
    <label>Controlling Question</label>
    <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Mapping Sections</relationshipLabel>
    <relationshipName>SFDC_Industry_Mapping_Sections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>