sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Section__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An introductory paragraph to display to the end-user when viewing this section.</description>
    <inlineHelpText>An introductory paragraph to display to the end-user when viewing this section.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>