sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Section__mdt/fields/Triggering_Answer__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Answer__c</fullName>
    <description>If populated, indicates that the answer that triggers this particular mapping section.</description>
    <inlineHelpText>If populated, indicates that the answer that triggers this particular mapping section.</inlineHelpText>
    <label>Triggering Answer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>