sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Section__mdt/listViews/All_Sections.listView-meta.xml
<ListView>
    <fullName>All_Sections</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Controlling_Question__c</columns>
    <columns>Description__c</columns>
    <columns>Triggering_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sections</label>
    <language>en_US</language>
</ListView>